--- a/modules/ROOT/pages/data-api/data-api-connector-user-guide/data-api-connector-examples.adoc
+++ b/modules/ROOT/pages/data-api/data-api-connector-user-guide/data-api-connector-examples.adoc
@@ -1,11 +1,11 @@
-= Shop API Connector Examples - Mule 4
+= Commerce Cloud Data Connector Examples - Mule 4
 ifndef::env-site,env-github[]
 include::_attributes.adoc[]
 endif::[]
 :imagesdir: ../../../assets/images/
 
 === ​Use Case for Creating a Customer After Submitting an Order in Anypoint Studio 7
-Shop API Connector is an operation-based connector, which means that when you add the connector to your flow, you need to configure a specific operation for the connector to perform. Shop API Connector supports three different types of configuration; this example uses the Customer Auth Connection Provider configuration.
+Commerce Cloud Data Connector is an operation-based connector, which means that when you add the connector to your flow, you need to configure a specific operation for the connector to perform. Shop API Connector supports three different types of configuration; this example uses the Customer Auth Connection Provider configuration.
 
 This use case shows how a guest user logs in to the Shop API and submits a basket of products, with shopping details. The successful submission of this order leads to registering the guest user as a customer. 
 
@@ -13,101 +13,52 @@ The use case requires you to follow these steps:
 
 . Create a new Mule application in Anypoint Studio (Studio), configuring port 8081 as HTTP Listener and the path as "/registrationPostCheckout".
 
-image::shop-api/shop-connector-example/shop-connector-http-listener-config.jpg[]
+image::data-api/data-connector-example/shop-connector-http-listener-config.jpg[]
 
 [start = 2]
-. Add Variable, Post Basket, Post Order, and Post Customer operations to the flow.
+. Add Operation, Assignment Search operations to the flow.
 
-image::shop-api/shop-connector-example/shop-connector-post-checkout-flow.jpg[]
+image::data-api/data-connector-example/data-connector-assignments-search-flow.jpg[]
 
 [start = 3]
-. Obtain the required body for the Post Basket operation from the postman and save it into Variable.
+. Obtain the required body for the Assignments Search operation from the postman and Add it to the Content parameter.
 
-image::shop-api/shop-connector-example/shop-connector-basket-body-variable.jpg[]
+image::data-api/data-connector-example/data-connector-assignment-search-body.jpg[]
 
 [start = 4]
-. A sample Post Basket operation payload is shown here:
+. A sample Assignments Search operation payload is shown here:
 
 ```xml
-{	
-	"billing_address": {
-        "_type": "order_address",
-        "address1": "Parvati",
-        "address2": "Swargate",
-        "city": "Pune",
-        "country_code": "IN",
-        "first_name": "User",
-        "full_name": "User -1",
-        "id": "a26b936e00a8e27190ee5248c3",
-        "last_name": "1",
-        "phone": "123456789",
-        "postal_code": "411001",
-        "post_box": "PUNE",
-        "second_name": "C.",
-        "state_code": "MH"
-    },
-    "product_items" : [{
-  "product_id": "609717716671M",
-  "quantity": 1,
-  "shipment_id": "me"
-}],
-"payment_instruments":[
-	{
-		"payment_method_id": "PayPal"
-	}],
-	"shipments":[
-		{
-		"shipping_address":	{
-	"address1": "Parvati",
-	"address2": "Swargate",
-	"city": "Pune",
-	"country_code": "IN",
-	"first_name": "User-1",
-	"last_name": "1",
-	"phone": "123456789",
-	"post_box": "PUNE",
-	"postal_code": "411001",
-	"second_name": "C.",
-	"state_code": "MH"
-},
-	"shipping_method":{
-  "id": "003"
-}
-		}]
-
+{
+  "count": 4,
+  "query": {
+    "textQuery": {
+      "fields": [
+        "description"
+      ],
+      "searchPhrase": "*"
+    }
+  },
+  "start": 2
 }
 ```
 
 [start = 5]
-. Either select the Customer Auth Connection Provider configuration from Shop API Connector and configure it with the required values or add a new configuration by clicking the green plus (+) symbol.
+. select the Commerce Cloud Data Connector Config from Commerce Cloud Data Connector and configure it with the required values or add a new configuration by clicking the green plus (+) symbol.
 
-image::shop-api/shop-connector-example/shop-connector-customer-configuration.jpg[]
+image::data-api/data-connector-example/data-api-connector-oauth2-configuration.jpg[]
 
 [start = 6]
 . If you have added new connection details, test your connection.
 
-. Complete the required fields for the Post Basket operation and save the configuration.
-
-image::shop-api/shop-connector-example/shop-connector-post-basket-config.jpg[]
-
-[start = 8]
-. Complete the required fields for the Post Order operation and save the configuration.
-
-image::shop-api/shop-connector-example/shop-connector-post-order-config.jpg[]
-
-[start = 9]
-. Supply the required body for the Post Customers operation and save the configuration.
-
-image::shop-api/shop-connector-example/shop-connector-post-customer.jpg[]
-
-[start = 10]
+[start = 7]
 . Save the Mule project.
 
 . Run the project as a Mule application by right-clicking the project name in Package Explorer and selecting Run As > Mule Application.
 
-. Navigate to http://localhost:8081/registrationPostCheckout, open Postman, and check the response.
+. Navigate to http://localhost:8081/assignmentsSearch, open Postman, and check the response.
 
-. You should see a new Customer and Placed Order success message.
+. You should see the seach data in the output.
 
 === To Create a Mule Project Using XML
 . Create new Mule Application
@@ -117,65 +68,30 @@ image::shop-api/shop-connector-example/shop-connector-post-customer.jpg[]
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
 
-<mule xmlns:shop="http://www.mulesoft.org/schema/mule/shop"
-	xmlns:ee="http://www.mulesoft.org/schema/mule/ee/core" xmlns:http="http://www.mulesoft.org/schema/mule/http"
+<mule xmlns:commerce-cloud-dataapi="http://www.mulesoft.org/schema/mule/commerce-cloud-dataapi" xmlns:http="http://www.mulesoft.org/schema/mule/http"
 	xmlns="http://www.mulesoft.org/schema/mule/core"
-	xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="
-http://www.mulesoft.org/schema/mule/ee/core http://www.mulesoft.org/schema/mule/ee/core/current/mule-ee.xsd http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
+	xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
 http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
-http://www.mulesoft.org/schema/mule/shop http://www.mulesoft.org/schema/mule/shop/current/mule-shop.xsd">
-	<shop:shop-jwt-and-oauth2-configuration-config name="Shop_Connector_Guest_JWT_Token" doc:name="Shop Connector Shop jwt and oauth 2 configuration" >
-		<shop:customers-auth-connection username="User098" password="Mr@56@7W67" baseUri="https://student28-training-eu06-dw.demandware.net/s/RefArch/dw/shop/v19_5" />
-	</shop:shop-jwt-and-oauth2-configuration-config>
-	<flow name="registrationPostCheckoutFlow">
-		<http:listener doc:name="8081/registrationPostCheckout" config-ref="HTTP_Listener_config" path="/registrationPostCheckout">
-		<http:error-response statusCode="#[error.errorMessage.attributes.statusCode]">
-               <http:body ><![CDATA[#[output application/json
----
-error.errorMessage.payload]]]></http:body>
-           </http:error-response>
-           </http:listener>
-		<set-variable doc:name="basket" variableName="basket" value="#[payload]"/>
-		<shop:create-baskets doc:name="Post Baskets" config-ref="Shop_Connector_Guest_JWT_Token">
-			<shop:content ><![CDATA[#[vars.basket]]]></shop:content>
-			<shop:custom-headers><![CDATA[#[output application/java
----
-{
-	"Authorization" : vars.guestToken
-}]]]></shop:custom-headers>
-		</shop:create-baskets>
-		<shop:create-orders doc:name="Post Orders" config-ref="Shop_Connector_Guest_JWT_Token">
-			<shop:content ><![CDATA[#[output application/json
----
-{
-	basket_id:payload.basket_id
-}]]]></shop:content>
-			<shop:custom-headers ><![CDATA[#[output application/java
----
-{
-	"Authorization" : vars.guestToken
-}]]]></shop:custom-headers>
-		</shop:create-orders>
-		<shop:create-customers doc:name="Post Customers" config-ref="Shop_Connector_Guest_JWT_Token">
-			<shop:content ><![CDATA[#[output application/json
----
-{
-  "customer": {
-    "email": "UseCase@gmail.com",
-    "first_name": "USE",
-    "last_name": "CASE",
-    "login": "useCase" ++ (randomInt(999) as String)
+http://www.mulesoft.org/schema/mule/commerce-cloud-dataapi http://www.mulesoft.org/schema/mule/commerce-cloud-dataapi/current/mule-commerce-cloud-dataapi.xsd">
+	<flow name="assignments-searchFlow" doc:id="b30d990f-1068-4cf6-9a0a-fb7a5dbd4691" >
+		<http:listener doc:name="8081/pricing/assignments/{version}/organizations/{organizationId}/assignments" doc:id="db06d1e0-324a-44f9-a063-f51fcaaed1b1" config-ref="HTTP_Listener_config" path="/pricing/assignments/{version}/organizations/{organizationId}/assignments"/>
+		<commerce-cloud-dataapi:create-pricing-assignments-organizations-assignments-by-version-organization-id doc:name="Assignments Search" doc:id="8816954e-0f65-4030-b86d-0fceb9566437" config-ref="Commerce_Cloud_Data_Connector_Config" version="#[attributes.uriParams.version]" organizationId="#[attributes.uriParams.organizationId]" siteId="#[attributes.queryParams.siteId]">
+			<commerce-cloud-dataapi:content ><![CDATA[#[{
+  "count": 4,
+  "query": {
+    "textQuery": {
+      "fields": [
+        "description"
+      ],
+      "searchPhrase": "*"
+    }
   },
-  "password": "useCase@123"
-}]]]></shop:content>
-			<shop:custom-headers ><![CDATA[#[output application/java
----
-{
-	"Authorization" : vars.guestToken
-}]]]></shop:custom-headers>
-		</shop:create-customers>
+  "start": 2
+}]]]></commerce-cloud-dataapi:content>
+		</commerce-cloud-dataapi:create-pricing-assignments-organizations-assignments-by-version-organization-id>
 	</flow>
 </mule>
+
 
 ```
 
