--- a/modules/ROOT/pages/data-api/data-api-connector-user-guide/data-api-connector-studio.adoc
+++ b/modules/ROOT/pages/data-api/data-api-connector-user-guide/data-api-connector-studio.adoc
@@ -1,4 +1,4 @@
-= Shop API Connector Studio Configuration - Mule 4
+= Commerce Cloud Data Connector Studio Configuration - Mule 4
 ifndef::env-site,env-github[]
 include::_attributes.adoc[]
 endif::[]
@@ -14,15 +14,15 @@ Before you can use a connector in Anypoint Studio, you must:
 . In Studio, create a Mule project.
 . Click the Exchange (X) icon in the upper left of the Studio taskbar.
 . In Exchange, click Login and supply your Anypoint Platform username and password.
-. In Exchange, search for Shop API Connector.
-. Select Shop API Connector and click Add to project.
-. Follow the prompts to install Shop API Connector.
+. In Exchange, search for Commerce Cloud Data Connector.
+. Select Commerce Cloud Data Connector and click Add to project.
+. Follow the prompts to install Commerce Cloud Data Connector.
 
 == Install the Connector in Studio
 . In Studio, create a Mule project.
 . In the Mule palette, click (X) Search in Exchange.
-. In Add Modules to Project, type Shop API Connector in the search field.
-. Click Shop API Connector in *Available modules*.
+. In Add Modules to Project, type Commerce Cloud Data Connector in the search field.
+. Click Commerce Cloud Data Connector in *Available modules*.
 . Click Add.
 . Click Finish.
 
@@ -34,7 +34,7 @@ Before you can use a connector in Anypoint Studio, you must:
 ```
 <dependency>
     <groupId>com.mulesoft.connectors</groupId>
-    <artifactId>shop-api</artifactId>
+    <artifactId>commerce-cloud-dataapi</artifactId>
     <version>RELEASE</version>
     <classifier>mule-plugin</classifier>
 </dependency>
@@ -44,100 +44,28 @@ When Studio is updated, a message displays in the lower-right corner. Click the 
 update, and then update the Apache Maven pom.xml file dependencies to use the new version number.
 
 == Configure the Connector
-Shop API Connector supports three types of connection providers:
+Commerce Cloud Data Connector supports only one type of connection provider:
 
-. Client Id Connection Provider
-. Customers Auth Connection Provider
 . Oauth2 Application Connection Provider
-
-=== To Configure the Connector Using Client Id Connection Provider
-. After adding a connector dependency to the Mule project, click the Global Elements tab at the base of the canvas.
-
-. In the Global Mule Configuration Elements screen, click Create.
-
-. In the Choose Global Type wizard, collapse the connector configuration, select Client Id Connection Provider, and click OK:
-
-. Configure the following parameters:
-
-[options="header",width="50%"]
-|============
-|Field Name   |Value
-|Base Uri     |Shop API base URI
-|X dw client id |Client ID
-|============
-
-image::shop-api/client-id-configuration/shop-api-connector-client-id-configuration.png[]
-
-[start = 5]
-. You can either enter credentials directly into the global configuration properties or reference them from a configuration file that contains the values.
-. This example adds credentials to the application properties file and references it using placeholders.
-. Make a Test Connection... to validate the configuration.
-
-image::shop-api/client-id-configuration/shop-api-connector-client-id-config-test-connection.png[]
-
-[start = 7]
-. On success, the configuration is ready to use!
-
-. A successful Client Id Connection Provider configuration looks like this:
-
-```xml
-   <shop:config name="Client_Id" doc:name="Shop Connector Config">
-       <shop:client-id-connection baseUri="${shop.address}" xDwClientId="${shop.clientId}" />
-   </shop:config>
-```
-
-=== To Configure the Connector Using Customers Auth Connection Provider configuration
-
-. Go back to Anypoint Studio. In Mule Application, click on Global Elements and click Create button
-
-. Collapse connector configuration, select Customers Auth Connection Provider and click Ok. You should see as below screen
-
-. Configure the following parameters:
-
-[options="header",width="40%,60%"]
-|============
-|Field Name   |Value
-| Username | The username to authenticate the requests 
-| Password |  The password to authenticate the requests 
-| Base Uri |  Shop API base URI
-| Client Id |  Client ID 
-| Type | Credentials or Guest
-|============
-
-image::shop-api/customers-auth-configuration/shop-connector-customers-auth-config.jpg[]
-
-[start = 4]
-. You can either enter credentials directly into the global configuration properties or reference them from a configuration file that contains the values.
-. This example adds credentials to the application properties file and references it using placeholders.
-. Make a Test Connection... to validate the configuration.
-. On success, the configuration is ready to use!
-
-. A successful Customers Auth Connection Provider configuration looks like this:
-
-```xml
-   <shop:shop-configuration-config name="cuatomers_auth" doc:name="Shop Connector Shop configuration" >
-		<shop:customers-auth-connection username="${shop.username}" password="${shop.password}" baseUri="${shop.baseuri}" clientId="${shop.clientId}" type="CREDENTIALS" />
-	</shop:shop-configuration-config>
-```
 
 === To Configure the Connector Using OAuth2 Application Connection Provider configuration
 
 . Go back to Anypoint Studio. In Mule Application, click on Global Elements and click Create button
 
-. Collapse connector configuration, select Shop Connector Conf Auth2.0 and click Ok. You should see as below screen
+. Collapse connector configuration, select Commerce Cloud Data Connector Config and click Ok. You should see as below screen
 
 . Configure the following parameters:
 
 [options="header",width="50%"]
 |============
 |Field Name   |Value
-|Base Uri    |Shop API base URI
+|Base Uri    |Data API base URI
 |Client Id | Client ID
 |Client Secret | Client Secret
 |Token url | Token URL
 |============
 
-image::shop-api/oauth2-configuration/shop-api-connector-oauth2-configuration.png[]
+image::data-api/oauth2-configuration/data-api-connector-oauth2-configuration.png[]
 
 [start = 4]
 . You can either enter credentials directly into the global configuration properties or reference them from a configuration file that contains the values.
@@ -145,17 +73,17 @@ image::shop-api/oauth2-configuration/shop-api-connector-oauth2-configuration.png
 . Make a Test Connection... to validate the configuration.
 . On success, the configuration is ready to use!
 
-image::shop-api/oauth2-configuration/shop-api-connector-oauth2-test-connection.png[]
+image::data-api/oauth2-configuration/data-api-connector-oauth2-test-connection.png[]
 
 [start = 6]
-. A successful OAuth Application Connection Provider configuration looks like this:
+. A successful OAuth2 Application Connection Provider configuration looks like this:
 
 ```xml
-   <shop:config name="Auth2.0" doc:name="Shop Connector Config" >
-       <shop:oauth2-application-connection baseUri="${shop.address}" >
-            <shop:oauth-client-credentials clientId="${shop.combinedClientId}" clientSecret="${shop.clientSecret}" tokenUrl="${shop.tokenUrl}?grant_type="${shop.BMUserGrantType}"&amp;client_id=${shop.clientId}"/>
-       </shop:oauth2-application-connection>
-   </shop:config>
+	<commerce-cloud-dataapi:config name="Commerce_Cloud_Data_Connector_Config" doc:name="Commerce Cloud Data Connector Config" doc:id="11c1cb1b-3e4a-4aa8-a108-d86ab274d50f" >
+		<commerce-cloud-dataapi:am-oauth2-connection baseUri="${data.baseUri}" >
+			<commerce-cloud-dataapi:oauth-client-credentials clientId="${data.clientId}" clientSecret="${data.clientSecret}" tokenUrl="${data.tokenUrl}"/>
+		</commerce-cloud-dataapi:am-oauth2-connection>
+	</commerce-cloud-dataapi:config>
 ```
 
 == Configure an Input Source
