--- a/modules/ROOT/pages/data-api/data-api-connector-user-guide/data-api-connector-examples.adoc
+++ b/modules/ROOT/pages/data-api/data-api-connector-user-guide/data-api-connector-examples.adoc
@@ -4,16 +4,15 @@ include::_attributes.adoc[]
 endif::[]
 :imagesdir: ../../../assets/images/
 
-=== ​Use Case for Creating a Customer After Submitting an Order in Anypoint Studio 7
-Commerce Cloud Data Connector is an operation-based connector, which means that when you add the connector to your flow, you need to configure a specific operation for the connector to perform. Shop API Connector supports three different types of configuration; this example uses the Customer Auth Connection Provider configuration.
-
-This use case shows how a guest user logs in to the Shop API and submits a basket of products, with shopping details. The successful submission of this order leads to registering the guest user as a customer. 
+=== ​Use Case for Searches for promotion campaign assignments in Anypoint Studio 7
+Commerce Cloud Data Connector is an operation-based connector, which means that when you add the connector to your flow, you need to configure a specific operation for the connector to perform. Commerce Cloud Data Connector supports OAuth2 configuration.
+After successful execution we get the search results for promotion campaign assignments. 
 
 The use case requires you to follow these steps:
 
-. Create a new Mule application in Anypoint Studio (Studio), configuring port 8081 as HTTP Listener and the path as "/registrationPostCheckout".
+. Create a new Mule application in Anypoint Studio (Studio), configuring port 8081 as HTTP Listener and the path as "/assignmentsSearch".
 
-image::data-api/data-connector-example/shop-connector-http-listener-config.jpg[]
+image::data-api/data-connector-example/data-connector-http-listener-config.jpg[]
 
 [start = 2]
 . Add Operation, Assignment Search operations to the flow.
